hphp/hack/test/typecheck/interface_async_method.php.exp
File "interface_async_method.php", line 4, characters 10-13:
'async' cannot be used on a method in an interface. Use an Awaitable<...> return type instead. (Parsing[1002])
